# linestring.rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  generate_coverage.sh
.github/workflows/: clippy.yml  rust.yml  rust2.yml
benches/: bench.rs  convex_hull_bench.rs  indexed_intersection_bench.rs  intersection_bench.rs  simplify_bench.rs
example/: fltk_gui.rs
src/: cgmath_2_mint.sed  cgmath_2_nalgebra.sed  cgmath_2d.rs  cgmath_3d.rs  cgmath_impl.rs  lib.rs  linestring_2d.rs  linestring_3d.rs  mint_2d.rs  mint_3d.rs  mint_impl.rs  nalgebra_2d.rs  nalgebra_3d.rs  nalgebra_impl.rs  shape.rs  vec_2d.rs  vec_3d.rs  vec_impl.rs  vecmath_3d.rs  vector_2d.rs  vector_3d.rs
src/cgmath_2d/: convex_hull.rs  intersection.rs
src/linestring_2d/: convex_hull.rs  impls.rs  indexed_intersection.rs  intersection.rs  simplify.rs  tests.rs
src/linestring_2d/convex_hull/: impls.rs  tests.rs
src/linestring_2d/indexed_intersection/: tests.rs
src/linestring_3d/: impls.rs  simplify.rs  tests.rs
src/mint_2d/: convex_hull.rs  intersection.rs
src/nalgebra_2d/: convex_hull.rs  intersection.rs
src/shape/: tests.rs
src/vec_2d/: convex_hull.rs  intersection.rs
src/vector_2d/: convex_hull.rs  intersection.rs
tests/: cgmath_tests.rs  mint_tests.rs  nalgebra_test.rs  perform_all_tests.sh  tests.rs  vec_tests.rs  vector_tests.rs
