[package]
name = "linestring"
version = "0.11.0"
authors = ["eadf"]
edition = "2021"
description = "2d line strings"
readme = "README.md"
repository = "https://github.com/eadf/linestring.rs"
license = "MIT OR Apache-2.0"
keywords = ["polyline", "intersection", "convex-hull", "douglas-peucker", "visvalingam-whyatt"]

[features]
console_trace = [] # used for debugging purposes (tbd)
glam = ["vector-traits/glam"] # this is only needed for the gui, tests and benchmarks
cgmath = ["vector-traits/cgmath"] # this is only needed for some tests

[dependencies]
#vector-traits = "0.3"
vector-traits = {git = "https://github.com/eadf/vector-traits.git"}
rayon = "1.8.0"
ahash = "0.8.6"
thiserror = "1.0.50"
itertools = "0.12.0"
smallvec = "1.11.2"
vob = "3.0.3"

[[example]]
name = "fltk_gui"
path = "example/fltk_gui.rs"

[dev-dependencies]
fltk = "1.4.17"
rand = "0.8.5"
criterion = "0.5.1"
#vector-traits = { version = "0.3", features = ["glam"] }
vector-traits = { git = "https://github.com/eadf/vector-traits.git", features = ["glam"] }

[[bench]]
name = "intersection_bench"
harness = false

[[bench]]
name = "indexed_intersection_bench"
harness = false

[[bench]]
name = "simplify_bench"
harness = false

[[bench]]
name = "convex_hull_bench"
harness = false

[profile.release]
lto = true
